hphp/hack/test/typecheck/reactive/rx_move1.php.exp
File "rx_move1.php", line 9, characters 5-15:
Rx\move is only allowed in argument position or as right hand side of the assignment. (Naming[2096])
